--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,target-densitydpi=device-dpi" />
     
 	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Tangerine"><!--serif-->
-	
 	<link href='http://fonts.googleapis.com/css?family=Redressed' rel='stylesheet' type='text/css'> <!--cursive-->
-		<link href='http://fonts.googleapis.com/css?family=Josefin+Sans:400,700' rel='stylesheet' type='text/css'><!--sans serif-->
+	<link href='http://fonts.googleapis.com/css?family=Josefin+Sans:400,700|Josefin+Slab:400,700' rel='stylesheet' type='text/css'><!--sans serif-->
 
 	
     <!-- add Google fonts for a serif, sans-serif, and cursive/fantasy font here -->
